Adjusted function getComputerChoice

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         function getComputerChoice() {
             let possibleChoice = ['Rock', 'Paper', 'Scissors'];
             const randomChoice = Math.floor(Math.random() * possibleChoice.length);
-            console.log(randomChoice, possibleChoice[randomChoice])
+            console.log(possibleChoice[randomChoice])
         }
         getComputerChoice()
     </script>
