--- a/index.html
+++ b/index.html
@@ -7,39 +7,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script>
+
         function getComputerChoice() {
             let possibleChoice = ['Rock', 'Paper', 'Scissors'];
             const randomChoice = Math.floor(Math.random() * possibleChoice.length);
             let computerChoice = possibleChoice[randomChoice]
             return computerChoice
         }
-        getComputerChoice()
-        console.log(getComputerChoice())
 
 
         function playRound(playerSelection, computerSelection) {
 
-            if (playerSelection || computerSelection == "Rock" && (playerSelection || computerSelection == "Paper")) {
-                return "you lose paper"
+            console.log(`The computer picked: ` + computerSelection)
+            console.log(`You picked: ` + playerSelection)
+
+            if (playerSelection == "Rock" && computerSelection == "Rock" ||
+                playerSelection == "Paper" && computerSelection == "Paper" ||
+                playerSelection == "Scissors" && computerSelection == "Scissors") {
+                return "This is a tie"
             }
-            return "you win"
+            else if (playerSelection == "Paper" && computerSelection == "Rock") {
+                return "You win ! Paper beats Rock"
+            }
+            else if (playerSelection == "Scissors" && computerSelection == "Rock") {
+                return "You lose ! Rock beats Scissors"
+            }
+            else if (playerSelection == "Rock" && computerSelection == "Paper") {
+                return "You lose ! Paper beats Rock"
+            }
+            else if (playerSelection == "Scissors" && computerSelection == "Paper") {
+                return "You win ! Scissors beats Paper"
+            }
+            else if (playerSelection == "Rock" && computerSelection == "Scissors") {
+                return "You win ! Rock beats Scissors"
 
+            }
+            else if (playerSelection == "Paper" && computerSelection == "Scissors") {
+                return "You lose ! Scissors beats Paper"
 
+            }
         }
 
 
         const playerSelection = prompt("");
         const computerSelection = getComputerChoice();
-
         console.log(playRound(playerSelection, computerSelection));
 
-        function game() {
-
-            for (let i = 0; i < 5; i++) {
-                playRound() * i
-            }
-
-        }
 
 
     </script>
