--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
             return computerChoice
         }
 
+        let userScore = 0
+        let computerScore = 0
+        const playerSelection = ""
 
         function playRound(playerSelection, computerSelection) {
+
+            playerSelection = prompt("Please enter either 'Rock' 'Paper' or 'Scissors'", "Rock");
 
             console.log(`The computer picked: ` + computerSelection)
             console.log(`You picked: ` + playerSelection)
@@ -27,36 +32,62 @@
                 return "This is a tie"
             }
             else if (playerSelection == "Paper" && computerSelection == "Rock") {
+                userScore++
                 return "You win ! Paper beats Rock"
             }
             else if (playerSelection == "Scissors" && computerSelection == "Rock") {
+                computerScore++
                 return "You lose ! Rock beats Scissors"
             }
             else if (playerSelection == "Rock" && computerSelection == "Paper") {
+                computerScore++
                 return "You lose ! Paper beats Rock"
             }
             else if (playerSelection == "Scissors" && computerSelection == "Paper") {
+                userScore++
                 return "You win ! Scissors beats Paper"
             }
             else if (playerSelection == "Rock" && computerSelection == "Scissors") {
+                userScore++
                 return "You win ! Rock beats Scissors"
 
             }
             else if (playerSelection == "Paper" && computerSelection == "Scissors") {
+                computerScore++
                 return "You lose ! Scissors beats Paper"
 
             }
             return "Please enter either 'Rock' 'Paper' or 'Scissors'"
         }
 
-
-        const playerSelection = prompt("Please enter either 'Rock' 'Paper' or 'Scissors'", "Rock");
-        const computerSelection = getComputerChoice();
-        console.log(playRound(playerSelection, computerSelection));
+        function finalScore() {
+            if (userScore > computerScore) {
+                return "You won the game !"
+            }
+            else if (computerScore > userScore) {
+                return "You lost the game !"
+            }
+            else if (computerScore == userScore) {
+                return "Its a tie game !"
+            }
+        }
 
         function game() {
 
+            for (let i = 0; i < 5; i++) {
+                const computerSelection = getComputerChoice();
+                console.log(playRound(playerSelection, computerSelection), computerScore, userScore);
+
+            }
+
+            finalScore()
+            console.log(finalScore())
+
+
         }
+        game()
+
+
 
 
     </script>
