--- a/index.html
+++ b/index.html
@@ -6,105 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock-Paper-Scissors</title>
-    <script>
-
-        //Generate random Computer choice.
-        function getComputerChoice() {
-            let possibleChoice = ['Rock', 'Paper', 'Scissors'];
-            const randomChoice = Math.floor(Math.random() * possibleChoice.length);
-            let computerChoice = possibleChoice[randomChoice]
-            return computerChoice
-        }
-
-
-        let userScore = 0
-        let computerScore = 0
-        const playerSelection = ""
-
-
-        //Game logic of rock-paper-scissors, comparing playerSelection with computerSelection.
-        function playRound(playerSelection, computerSelection) {
-
-            ///Prompt to ask player choice, between rock-paper-scissors
-
-            playerSelection = prompt("Please enter either 'Rock' 'Paper' or 'Scissors'", "Rock");
-
-            console.log(`The computer picked: ` + computerSelection)
-            console.log(`You picked: ` + playerSelection)
-
-            if (playerSelection == "Rock" && computerSelection == "Rock" ||
-                playerSelection == "Paper" && computerSelection == "Paper" ||
-                playerSelection == "Scissors" && computerSelection == "Scissors") {
-                return "This is a tie"
-            }
-            else if (playerSelection == "Paper" && computerSelection == "Rock") {
-                userScore++
-                return "You win ! Paper beats Rock"
-            }
-            else if (playerSelection == "Scissors" && computerSelection == "Rock") {
-                computerScore++
-                return "You lose ! Rock beats Scissors"
-            }
-            else if (playerSelection == "Rock" && computerSelection == "Paper") {
-                computerScore++
-                return "You lose ! Paper beats Rock"
-            }
-            else if (playerSelection == "Scissors" && computerSelection == "Paper") {
-                userScore++
-                return "You win ! Scissors beats Paper"
-            }
-            else if (playerSelection == "Rock" && computerSelection == "Scissors") {
-                userScore++
-                return "You win ! Rock beats Scissors"
-
-            }
-            else if (playerSelection == "Paper" && computerSelection == "Scissors") {
-                computerScore++
-                return "You lose ! Scissors beats Paper"
-
-            }
-            return "Please enter either 'Rock' 'Paper' or 'Scissors'"
-        }
-
-
-        ///Final scoring function getting called after one game() to display the final score.
-        function finalScore() {
-            if (userScore > computerScore) {
-                return "You won the game !"
-            }
-            else if (computerScore > userScore) {
-                return "You lost the game !"
-            }
-            else if (computerScore == userScore) {
-                return "Its a tie game !"
-            }
-        }
-
-
-
-        ///Main game() function that plays 5 rounds of a rock-paper-scissors ( playRound() ), and display the final score.
-        function game() {
-
-            for (let i = 0; i < 5; i++) {
-                const computerSelection = getComputerChoice();
-                console.log(playRound(playerSelection, computerSelection), computerScore, userScore);
-
-            }
-
-            finalScore()
-            console.log(finalScore())
-
-
-        }
-        game()
-
-
-
-
-    </script>
+    <script src="index.js" defer></script>
 </head>
 
 <body>
+    <div id="btn">
+        <button data="Rock">Rock</button>
+        <button data="Paper">Paper</button>
+        <button data="Scissors">Scissors</button>
+    </div>
 
 </body>
 
