--- a/index.html
+++ b/index.html
@@ -6,16 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock-Paper-Scissors</title>
+    <link rel="stylesheet" href="style.css">
     <script src="index.js" defer></script>
 </head>
 
 <body>
-    <div id="btn">
-        <button data="Rock">Rock</button>
-        <button data="Paper">Paper</button>
-        <button data="Scissors">Scissors</button>
+    <div class="wrapper">
+        <div id="btn">
+            <button data="Rock">Rock</button>
+            <button data="Paper">Paper</button>
+            <button data="Scissors">Scissors</button>
+        </div>
+        <div class="wrapperresult">
+            <div id="pickedChoices"></div>
+            <div id="results"></div>
+        </div>
     </div>
-
 </body>
 
 </html>
